--- a/4_build_sf_data_pipeline.ipynb
+++ b/4_build_sf_data_pipeline.ipynb
@@ -73,7 +73,7 @@
    "outputs": [],
    "source": [
     "CREATE OR REPLACE DYNAMIC TABLE STAGING.USER_PROFILES_DT\n",
-    "TARGET_LAG = DOWNSTREAM\n",
+    "TARGET_LAG = '2 MINUTES'\n",
     "WAREHOUSE = TRADING_ANALYTICS_WH\n",
     "INITIALIZE = ON_CREATE\n",
     "AS\n",
